# NBA_draft_classification

./: LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: final.pkl  wk2_lr_pipeline.pkl  wk3_lr_pipeline.pkl
notebooks/: Shah_Rushab-14351985-Final.ipynb  Shah_Rushab-14351985-Week1_lgb.ipynb  Shah_Rushab-14351985-Week2_lr.ipynb  Shah_Rushab-14351985-Week3_lr.ipynb  Shah_Rushab-14351985-Week3_lr_knn.ipynb
