[tool.poetry]
name = "nba-draft-classification"
version = "0.1.10"
description = "Binary classifier to predict likelihood of getting drafted by NBA"
authors = ["Rushab Shah"]
readme = "README.md"
packages = [{include = "nba_draft_classification"}]

[tool.poetry.dependencies]
python = "^3.9.13"
pandas = "2.0.1"
jupyterlab = "3.6.3"
scikit-learn = "1.2.2"
matplotlib = "3.7"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
